Cambios menores en el código de mi pagina

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/img/Fer-gusanito.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/db4b33680b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/estilos.css">
 
@@ -19,11 +18,9 @@
 <!-- Menu de navegación -->
 <nav>
     <ul>
-        <li><a href="#aboutme">Sobre mi</a></li>
         <li><a href="#proyects">Proyectos</a></li>
         <li id="logo"><a href="./index.html">👾</a></li>
-        <li><a href="#exp">Skills</a></li>
-        <li><a href="#contactar">Contactar</a></li>
+        <li><a href="#exp">MI VIAJE</a></li>
     </ul>
 </nav>
 <article>
@@ -36,8 +33,7 @@
         <h3 class="hastag">#Ingeniero en IA</h3>
         <ul id="social-media">
             <li>
-                <a class="social-media-icon" href="https://open.spotify.com/show/7uFoBmo3WADARZ31yD1kU5"
-                   target="_blank">
+                <a class="social-media-icon" href="https://open.spotify.com/show/7uFoBmo3WADARZ31yD1kU5" target="_blank">
                     <i class="fa-brands fa-spotify ">
                     </i>
                 </a>
@@ -74,7 +70,6 @@
                 buscar formas de mejorar y simplificar procesos. Estoy decidido a alcanzar la vida que deseo, con la
                 ambición y la curiosidad que me caracterizan, pero siempre con respeto por los límites y la libertad de
                 los demás.</p>
-
         </div>
     </section>
     <!-- Bloque portfolio -->
@@ -88,11 +83,11 @@
         <div id="proyect_container" class="proyect_container">
             <div class="proyect">
                 <img ALT="" src="./img/python.png">
-                <h3>Pyton</h3>
+                <h3>Pyton🐍</h3>
                 <h4>Aprendiendo las bases de Pyton</h4>
                 <div class="sep"></div>
                 <p>Este proyecto plantea las bases de pyton</p>
-                <p class="time">Última actualización 18/08/2023</p>
+                <p class="time">Última actualización 21/08/2023</p>
                 <div class="masinfo">
                     <button type="button" onclick="window.location.href='./proyects/proyect_n/index.html';">👉🏻</button>
                 </div>
@@ -251,7 +246,7 @@
                 <li>-----------------------------------------------</li>
                 <li class="changes">🔹Implementación de el histórico de registro de cambios</li>
                 <li class="changes">🔹Reparación de links caídos o referencias inexistentes</li>
-                <li class="changes">🔹Mejora del diseño en elementos de el apartado "Web version"</li>
+                <li class="changes">🔹Mejora del diseño en elementos del apartado "Web version"</li>
                 <li class="changes">🔹Implementación de fechas en el apartado "Web version"</li>
                 <li class="changes">🔹Diseño responsivo en el apartado "Web version"</li>
                 <li class="changes">🔹Eliminación de elementos de relleno en "Proyectos" y en "Exp & Skills" y adición de
