--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <article>
     <!-- Bloque de inicio -->
     <section id="inicio">
-        <h2>Fernando Leon Franco</h2>
+        <h2>Frank Marin</h2>
         <h3 class="hastag">#Empresario</h3>
         <h3 class="hastag">#Speaker</h3>
         <h3 class="hastag">#Programador</h3>
