--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fernando Leon Blog</title>
+    <title>Fernando Leon Franco</title>
     <!-- Links de importaciones -->
     <link rel="icon" type="image/x-icon" href="/img/Fer-gusanito.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
