Agregado enlace a Linkedin y actualizado proyecto de gestor de propiedades

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                     </i>
                 </a>
             </li>
+            <!-- Likedin -->
+            <li>
+                <a class="social-media-icon" href="https://www.linkedin.com/in/fernando-leon-franco-970912225/" target="_blank">
+                    <i class="fa-brands fa-linkedin ">
+                    </i>
+                </a>
+            </li>
+            
         </ul>
     </section>
     <!-- Bloque de about me -->
@@ -82,14 +90,14 @@
         </div>-->
         <div id="proyect_container" class="proyect_container">
             <div class="proyect">
-                <img ALT="" src="./img/python.png">
-                <h3>Pyton🐍</h3>
-                <h4>Aprendiendo las bases de Pyton</h4>
+                <img ALT="" src="./img/gestor_propiedades.png">
+                <h3>Gestor de propiedades</h3>
+                <h4>Desarrollado con Django</h4>
                 <div class="sep"></div>
-                <p>Este proyecto plantea las bases de pyton</p>
-                <p class="time">Última actualización 21/08/2023</p>
+                <p>Este proyecto gestiona las propiedades inmoviliarias para una mejor gestión con un motores de predicción por detras.</p>
+                <p class="time">Última actualización 08/04/2024</p>
                 <div class="masinfo">
-                    <button type="button" onclick="window.location.href='./proyects/proyect_n/index.html';">👉🏻</button>
+                    <button type="button" onclick="window.location.href='https://lefranhome.com/';">👉🏻</button>
                 </div>
             </div>
             <div class="proyect">
