Work in progress🚧...

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h3 class="hastag">#Empresario</h3>
         <h3 class="hastag">#Speaker</h3>
         <h3 class="hastag">#Programador</h3>
-        <h3 class="hastag">#Ingeniero en IA</h3>
+        <h3 class="hastag">#Ingeniero en Inteligencia Artificial</h3>
         <ul id="social-media">
             <li>
                 <a class="social-media-icon" href="https://open.spotify.com/show/7uFoBmo3WADARZ31yD1kU5" target="_blank">
