Agregados cambios en el pie de página, incluyendo un enlace a un proyecto de gestor de propiedades en Django.

--- a/index.html
+++ b/index.html
@@ -204,7 +204,21 @@
 <!-- Footer -->
 <footer>
     <div id="logChanges">
+
         <div id="currentCardChanges">
+            <ul>
+                <li>Web version V .1️⃣4️⃣ | 08/04/2024</li>
+
+                <li>🔷Changes log 👇🏼</li>
+                <li>-----------------------------------------------</li>
+                <li class="changes">🔹Se agrega proyecto django
+                    <a href="https://lefranhome.com/">Gestor de propiedades</a>
+                </li>
+                <li>-----------------------------------------------</li>
+            </ul>
+        </div>
+
+        <div id="cardChanges">
             <ul>
                 <li>Web version V .1️⃣3️⃣ | 10/12/2022</li>
 
